@@ -19,40 +19,47 @@
 #define MAXARGS 64
 #define NO_SERVER_SUFFIX "NO_SERVER_SUFFIX"
 
-int main(
+/*
+ * parse_commandline_opts() - evaluate the pbs_track command line options
+ *
+ */
+int parse_commandline_opts(
 
-  int    argc,
-  char **argv) /* pbs_track */
-
+  int          argc,
+  char       **argv,
+  std::string &tmpAdopteeID,
+  char        *tmpJobID,
+  int         &DoBackground)
   {
   int ArgIndex;
   int NumErrs = 0;
 
-  char *Args[MAXARGS];
-  int   aindex = 0;
-
-  int   rc;
-  int   pid;
-
-  char tmpJobID[PBS_MAXCLTJOBID];        /* from the command line */
-
-  char JobID[PBS_MAXCLTJOBID];  /* modified job ID for MOM/server consumption */
-  char ServerName[MAXSERVERNAME];
-
-  int  DoBackground = 0;
-
-  tmpJobID[0] = '\0';
-
-  /* USAGE: pbs_track [-j <JOBID>] -- a.out arg1 arg2 ... argN */
-
-#define GETOPT_ARGS "bj:"
+#define GETOPT_ARGS "a:bj:"
 
   while ((ArgIndex = getopt(argc, argv, GETOPT_ARGS)) != EOF)
     {
     switch (ArgIndex)
       {
+      /* -a: adopt a process */
+      case 'a':
+        /* If we have already read a -b option, we know that there is an error */
+        if (DoBackground == 1)
+          {
+          NumErrs++;
+          break;
+          }
+
+        tmpAdopteeID = optarg;
+
+        break;
 
       case 'b':
+        /* If we have already read an -a option, we know that there is an error */
+        if (tmpAdopteeID.size() != 0)
+          {
+          NumErrs++;
+          break;
+          }
 
         /* background process */
 
@@ -68,33 +75,82 @@ int main(
 
       default:
 
+
         NumErrs++;
 
         break;
       }
     }
 
+  /* Initial sanity check of arguments passed by user
+   * e.g. there should not be a executable specified if we are using
+   * the adopt option.
+   */
   if ((NumErrs > 0) ||
-      (optind >= argc) ||
-      (tmpJobID[0] == '\0'))
+      ((optind >= argc) && (tmpAdopteeID.size() == 0)) ||
+      ((tmpJobID[0] == '\0') && (tmpAdopteeID.size() == 0)) ||
+      ((tmpAdopteeID.size() > 0) && (tmpJobID[0] == '\0')))
     {
-    static char Usage[] = "USAGE: pbs_track [-j <JOBID>] [-b] -- a.out arg1 arg2 ... argN\n";
+    fprintf(stdout, "NumErrs %d tmpJobID[0] %d tmpAdopteeID.size() %d\n", NumErrs, tmpJobID[0], tmpAdopteeID.size());
+    fprintf(stdout, "argc %d argv[0] %s argv[1] %s argv[2] $s", argc, argv[0], argv[1], argv[2]);
+    static char Usage[] = "USAGE: pbs_track -j <JOBID> [-b] -- a.out arg1 arg2 ... argN\n" \
+                          " OR    pbs_track -j <JOBID> -a <PID>\n";
     fprintf(stderr, "%s", Usage);
-    exit(2);
+    return 2;
     }
 
-  if (getenv(NO_SERVER_SUFFIX) != NULL)
+  return PBSE_NONE;
+
+  }
+
+
+
+/*
+ * adopt_process() - adopt a running process into a running PBS job
+ *
+ * This function will only be called if the calling function (main)
+ * determines that the user wants to adopt an existing process
+ */
+int adopt_process(
+
+  char        *JobID,
+  std::string  tmpAdopteeID)
+  {
+  int   rc;
+  int   adoptee_pid;
+
+  adoptee_pid = strtol(tmpAdopteeID.c_str(), NULL, 10);
+
+  if (errno == ERANGE || tmpAdopteeID.find_first_not_of("0123456789") != std::string::npos)
     {
-    snprintf(JobID, sizeof(JobID), "%s", tmpJobID);
+    fprintf(stderr, "Invalid PID to adopt: %s\n", tmpAdopteeID.c_str());
+    return PBSE_RMBADPARAM;
     }
-  else
-    {
-    if (get_server(tmpJobID, JobID, sizeof(JobID), ServerName, sizeof(ServerName)))
-      {
-      fprintf(stderr, "pbs_track: illegally formed job identifier: '%s'\n", JobID);
-      exit(1);
-      }
-    }
+
+  rc = tm_adopt(JobID, TM_ADOPT_JOBID, adoptee_pid);
+
+  return rc;
+  }
+
+
+
+/*
+ * fork_process() - fork process if user has requested such behavior
+ *
+ * If the user passed the -b option, we will need to fork this process.
+ * Also, arguments for the soon-to-be created new process are gathered.
+ */
+int fork_process(
+
+  int           argc,
+  char        **argv,
+  int           DoBackground,
+  int          &this_pid,
+  char         *JobID,
+  char        **Args)
+  {
+  int aindex = 0;
+  int rc = -100;
 
   /* gather a.out and other arguments */
 
@@ -111,29 +167,64 @@ int main(
 
   /* decide if we should fork or not */
 
-  pid = 1;
+  this_pid = 1;
 
   if (DoBackground == 1)
     {
     printf("FORKING!\n");
 
-    pid = fork();
+    this_pid = fork();
     }
 
-  if ((DoBackground == 0) || (pid == 0))
+  if ((DoBackground == 0) || (this_pid == 0))
     {
-    /* either parent or child, depending on the setting */
-
-    /* call tm_adopt() to start tracking this process */
-
     rc = tm_adopt(JobID, TM_ADOPT_JOBID, getpid());
+    }
+  else if (this_pid > 0)
+    {
+    /* parent*/
 
+    fclose(stdin);
+    fclose(stdout);
+    fclose(stderr);
+    }
+  else if (this_pid < 0)
+    {
+    fprintf(stderr, "pbs_track: could not fork (%d:%s)\n",
+            errno,
+            strerror(errno));
+    }
+
+  return rc;
+  }
+
+
+
+/*
+ * handle_adoption_results() - Determine if call to tm_adopt was successful
+ *
+ * The results of the tm_adopt call are evaluated and the user is informed
+ * of its status. If we need to call a new command (i.e. we are not adopting
+ * an existing process), the command is also called and this process is replaced.
+ */
+int handle_adoption_results(
+  int          rc,
+  int          DoBackground,
+  int          this_pid,
+  char        *JobID,
+  std::string  tmpAdopteeID,
+  char       **Args)
+  {
+
+  if ((DoBackground == 0) || (this_pid == 0) || tmpAdopteeID.size() > 0)
+    {
     switch (rc)
       {
 
       case TM_SUCCESS:
 
         /* success! */
+        fprintf(stderr, "Success!\n");
 
         break;
 
@@ -175,32 +266,91 @@ int main(
 
     if (rc != TM_SUCCESS)
       {
-      exit(-1);
+      return -1;
       }
 
     /* do the exec */
 
-    if (execvp(Args[0], Args) == -1)
+    if (tmpAdopteeID.size() == 0 &&
+        execvp(Args[0], Args) == -1)
       {
       fprintf(stderr,"execvp failed with error %d, message:\n%s\n",
         errno,
         strerror(errno));
+      return errno;
       }
-    }  /* END if ((DoBackground == 0) || (pid == 0)) */
-  else if (pid > 0)
-    {
-    /* parent*/
-
-    fclose(stdin);
-    fclose(stdout);
-    fclose(stderr);
-    }
-  else if (pid < 0)
-    {
-    fprintf(stderr, "pbs_track: could not fork (%d:%s)\n",
-            errno,
-            strerror(errno));
     }
 
-  exit(0);
+  return 0;
+  }
+
+
+
+int main(
+
+  int    argc,
+  char **argv) /* pbs_track */
+
+  {
+  char *Args[MAXARGS];
+
+  int   rc;
+  int   this_pid;
+
+  char tmpJobID[PBS_MAXCLTJOBID];        /* from the command line */
+  std::string tmpAdopteeID;
+
+  char JobID[PBS_MAXCLTJOBID];  /* modified job ID for MOM/server consumption */
+  char ServerName[MAXSERVERNAME];
+
+  int  DoBackground = 0;
+
+  tmpJobID[0] = '\0';
+
+  /* USAGE: pbs_track [-j <JOBID>] -- a.out arg1 arg2 ... argN
+   *  OR    pbs_track -j <JOBID> -a <PID>\n
+   */
+  rc = parse_commandline_opts(argc, argv, tmpAdopteeID, tmpJobID, DoBackground);
+  if (rc)
+    {
+    exit(rc);
+    }
+
+  /* Append server name to job number. Thus we create a fully qualified
+   * job name to use when we check if that job exists.
+   */
+  if (getenv(NO_SERVER_SUFFIX) != NULL)
+    {
+    snprintf(JobID, sizeof(JobID), "%s", tmpJobID);
+    }
+  else
+    {
+    if (get_server(tmpJobID, JobID, sizeof(JobID), ServerName, sizeof(ServerName)))
+      {
+      fprintf(stderr, "pbs_track: illegally formed job identifier: '%s'\n", JobID);
+      exit(1);
+      }
+    }
+
+  /* Check whether we are adopting a previously-existing process,
+   * or creating a new one. If we are adopting (tmpAdopteeID.size() > 0)
+   * just check if the given pid is valid, then adopt specified process.
+   * Otherwise, we will fork the process, if necessary.
+   */
+  if (tmpAdopteeID.size() > 0)
+    {
+    rc = adopt_process(JobID, tmpAdopteeID);
+    if (rc == PBSE_RMBADPARAM)
+      {
+      return 1;
+      }
+    }
+  else
+    {
+    rc = fork_process(argc, argv, DoBackground, this_pid, JobID, Args);
+    }
+
+  rc = handle_adoption_results(rc, DoBackground, this_pid, JobID, tmpAdopteeID, Args);
+
+  exit(rc);
   }  /* END main() */
