@@ -1,19 +1,41 @@
 #include "license_pbs.h" /* See here for the software license */
 #include <stdlib.h>
 #include <stdio.h> /* fprintf */
+#include "tm.h"
+#include <string.h>
+#include <string>
+#include <sys/types.h>
+#include <unistd.h>
 
 extern "C"
 {
 int tm_adopt(char *id, int adoptCmd, pid_t pid)
   { 
-  fprintf(stderr, "The call to tm_adopt needs to be mocked!!\n");
-  exit(1);
+  /* Assume that there are two jobs, 1.localhost and 2.localhost
+   * We'll also pretend that all processes with pid under 2000 are owned
+   * by other users
+   */
+
+  if (strcmp(id, "1.localhost") == 0 ||
+      strcmp(id, "2.localhost") == 0)
+    {
+    if (pid == getpid())
+      return 0;
+
+    if (pid < 2000)
+      return TM_EPERM;
+
+    return 0;
+    }
+
+  return 1;
   }
 
-char *pbse_to_txt(int err)
+const char *pbse_to_txt(int err)
   { 
-  fprintf(stderr, "The call to pbse_to_txt needs to be mocked!!\n");
-  exit(1);
+  std::string message = "There are no bugs here";
+
+  return message.c_str();
   }
 }
 
